# resource_monitor

./: .gitignore  README.md  csv_signature_proposal.md
gtest/: CMakeLists.txt
gtest/install/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
gtest/report/html/: index-sort-f.html  index-sort-l.html  index.html
gtest/report/html/app_profile/: cpu_sampler.c.func-sort-c.html  cpu_sampler.c.func.html  cpu_sampler.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  io_sampler.c.func-sort-c.html  io_sampler.c.func.html  io_sampler.c.gcov.html  mem_sampler.c.func-sort-c.html  mem_sampler.c.func.html  mem_sampler.c.gcov.html  proc_reader.c.func-sort-c.html  proc_reader.c.func.html  proc_reader.c.gcov.html  report.c.func-sort-c.html  report.c.func.html  report.c.gcov.html  thread_fd_sampler.c.func-sort-c.html  thread_fd_sampler.c.func.html  thread_fd_sampler.c.gcov.html
gtest/report/html/home/ubuntu/Documents/code-server/tbox_archi/Architecture/resource_test/src/app_profile/: cpu_sampler.c.func-sort-c.html  cpu_sampler.c.func.html  cpu_sampler.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  io_sampler.c.func-sort-c.html  io_sampler.c.func.html  io_sampler.c.gcov.html  mem_sampler.c.func-sort-c.html  mem_sampler.c.func.html  mem_sampler.c.gcov.html  proc_reader.c.func-sort-c.html  proc_reader.c.func.html  proc_reader.c.gcov.html  report.c.func-sort-c.html  report.c.func.html  report.c.gcov.html  thread_fd_sampler.c.func-sort-c.html  thread_fd_sampler.c.func.html  thread_fd_sampler.c.gcov.html
gtest/src/: proc_reader.h  test_app_profile.cpp  test_app_profile_v2.cpp  test_proc_reader.cpp
resource_test/: README.md  resource_test.html  tool_guide.html
resource_test/dummy_app/: CMakeLists.txt  dummy_app.c  rw_io_test.c  toolchain.cmake
resource_test/python/: build_embedded.sh  plot_gui.py  plot_profile.py
resource_test/scripts/: app_resource_profile.sh  dummy_app.sh  stability_24h.sh  system_stress.sh
resource_test/src/: CMakeLists.txt
resource_test/src/ThirdPartyLib/openssl-1.1.1d/lib/: libssl.so.1.1
resource_test/src/ThirdPartyLib/openssl-1.1.1d/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
resource_test/src/app_profile/: CMakeLists.txt  core_sampler.c  cpu_sampler.c  csv_verify.c  io_sampler.c  main.c  mem_sampler.c  net_sampler.c  proc_reader.c  report.c  sampler.h  sign.c  sign.h  thread_fd_sampler.c
resource_test/src/stability_monitor/: CMakeLists.txt  main.c
resource_test/src/system_stress/: CMakeLists.txt  main.c
resource_test/src/toolchain/: arm-linux-toolchain-linux.cmake
tbox_docs/: CloudGW.md  HTCU.md  OTA.md  Slink.md  TBox OTA软件设计说明书.doc  TBox_Architecture.html  TBox中间件服务架构说明书.doc  TBox充电桩主控软件设计说明书.doc  TBox平台架构设计说明书.doc  TBox平台硬件能力说明书.doc  TBox统一诊断服务设计说明书.doc  TBox通信软件设计说明书.doc  TTCU.md  Tbox云端网关软件设计说明书.doc  UDS.md  hardware.md  hardware_capability_svc.csv  middleware.md  platform.md  resource_plan.csv  resource_plan.md  resource_test.20260703.1713.tar  resource_test.html
